--- a/commands/#4.md
+++ b/commands/#4.md
@@ -1,6 +1,7 @@
 ## Guide to embeds
 
 In discord.js, you can send an embed in 2 ways:
+### Type 1 embed
 ```js
 const Discord = require('discord.js');
 
