Add a list of embed builder functions

--- a/commands/#4.md
+++ b/commands/#4.md
@@ -5,9 +5,22 @@ In discord.js, you can send an embed in 2 ways:
 ```js
 const Discord = require('discord.js');
 
-const exampleEmbed = new Discord.MessageEmbed()
+const abc = new Discord.MessageEmbed()
 .setTitle('Darkgoatie\'s guide to discord.js') // We used a `\` before the `'`, for preventing it from creating a new string and breaking the command.
 .setDescription('Commands: \n !help = Shows you the help menu \n !repeat <phrase> = Repeats something.') // `\n` means a new line, same function with the Enter button in your keyboard.
 ```
 
 Here is a list of all embed builder functions:
+
+```js
+	.setColor('Color...') // Use hex here, example #FF0000 for red, A few list of hex colors below
+	.setTitle('Title...')
+	.setURL('Url...')
+	.setAuthor('Some name', 'IMAGE-URL', 'LINK')
+	.setDescription('Description...')
+	.setThumbnail('IMAGE-URL')
+	.addField('Field title...', 'Field description...', true) // The last 'True' part means this field will be inline. You can use false/true in that field.
+	.setImage('IMAGE-URL')
+	.setTimestamp() // Adds a timestamp to the embed
+	.setFooter('Footer...', 'IMAGE-URL');
+```
