Added type 2 embeds, also some updates to type 1
Added 'message.channel.send(abc)' to type 1
Added 2-A and 2-B

--- a/commands/#4.md
+++ b/commands/#4.md
@@ -8,6 +8,8 @@ const Discord = require('discord.js');
 const abc = new Discord.MessageEmbed()
 .setTitle('Darkgoatie\'s guide to discord.js') // We used a `\` before the `'`, for preventing it from creating a new string and breaking the command.
 .setDescription('Commands: \n !help = Shows you the help menu \n !repeat <phrase> = Repeats something.') // `\n` means a new line, same function with the Enter button in your keyboard.
+
+message.channel.send(abc)
 ```
 
 Here is a list of all embed builder functions:
@@ -23,4 +25,28 @@ Here is a list of all embed builder functions:
 	.setImage('IMAGE-URL')
 	.setTimestamp() // Adds a timestamp to the embed
 	.setFooter('Footer...', 'IMAGE-URL');
+```
+
+### Type 2 embed
+#### Type 2-A
+```js
+message.channel.send({embed: {
+  title: "Title...",
+  description: "Description...",
+  footer: "Footer...",
+  thumbnail: "Thumbnail..."
+}})
+```
+#### Type 2-B
+```js
+const def = {
+  title: "Title...",
+  description: "Description...",
+  footer: "Footer...",
+  thumbnail: "Thumbnail..."
+}
+
+
+
+message.channel.send({embed: def })
 ```
