--- a/commands/#4.md
+++ b/commands/#4.md
@@ -35,7 +35,7 @@ message.channel.send({embed: {
   description: "Description...",
   footer: "Footer...",
   thumbnail: "Thumbnail..."
-}})
+}}) // embed we both define & send the embed here.
 ```
 #### Type 2-B
 ```js
@@ -44,9 +44,7 @@ const def = {
   description: "Description...",
   footer: "Footer...",
   thumbnail: "Thumbnail..."
-}
+} // We create the embed here
 
-
-
-message.channel.send({embed: def })
+message.channel.send({embed: def }) // We send the embed here
 ```
