Add hex color codes

--- a/commands/#4.md
+++ b/commands/#4.md
@@ -48,9 +48,9 @@ const def = {
 
 message.channel.send({embed: def }) // We send the embed here
 ```
-
-Name	Hex Code	RGB Code
-Black	#000000	rgb(0, 0, 0)
-Red	#FF0000	rgb(255, 0, 0)
-Maroon	#800000	rgb(128, 0, 0)
-Yellow	#FFFF00	rgb(255, 255, 0)
+### Hex Color codes
+Name | Hex Code
+Black | #000000
+Red | #FF0000
+Maroon | #800000
+Yellow | #FFFF00
