Fixed hex code list

--- a/commands/#4.md
+++ b/commands/#4.md
@@ -49,8 +49,8 @@ const def = {
 message.channel.send({embed: def }) // We send the embed here
 ```
 ### Hex Color codes
-Name | Hex Code
-Black | #000000
-Red | #FF0000
-Maroon | #800000
-Yellow | #FFFF00
+- Name | Hex Code
+- Black | #000000
+- Red | #FF0000
+- Maroon | #800000
+- Yellow | #FFFF00
